...
            modifier = Modifier
                .height(30.dp)
                .padding(2.dp)
                .clip(CircleShape)
                .background(Color.LightGray)
                .clickable { onClick() }
                .testTag("deleteIconContainer")
        ) {
            Icon(
                modifier = Modifier
                    .padding(5.dp)
                    .testTag("deleteIcon"),
                painter = painterResource(id = R.drawable.ic_baseline_close_24),
...
