...

@Preview
@Composable
fun CreditCardPreview() {
    val creditCard = CreditCardModel(
        number = "00AA11BB22CC4",
        personName = "carlos menjivar",
        expiration = "08/22"
    )
    CreditCard(model = creditCard)
}
